--- a/about.css
+++ b/about.css
@@ -23,6 +23,8 @@ body{
     margin-top: 20px;
     color: grey;
     font-size: 23px;
+    height: fit-content;
+    width: 100%;
     
     text-align: left;
     margin-right: 375px;
@@ -33,11 +35,15 @@ body{
 
 .greeting{
 
-    margin-top: 40px;
+    
     display: flex;
     flex-direction: column;
-    margin-left: 475px;
-    text-align: left;
+    
+    margin-left: 550px;
+    margin-right: 550px;
+    margin-top: 100px;
+    align-content: center;
+    
 }
 
 .greeting h1{
@@ -52,13 +58,21 @@ body{
 
 }
 
+.ndt{
+    color: grey;
+    
 
+}
 html{
     scroll-behavior: smooth;
 }
 
 p{
     color: rgb(255, 255, 255);
+    width: 50%;
+    height: 100%;
+    align-content: center;
+
 }
 
 /*Transition*/
@@ -66,19 +80,25 @@ p{
 a, .btn{
     transition: all 500ms ease;
 }
+.desktop-nav{
+    align-content: center;
+}
 
 /*Navigation*/
 nav, .links-nav{
     display: flex;
-    text-align: center  ;
+    align-content: center;
+    margin-top: 10px;
 
 }
 
 nav{
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    align-content: center;
+    
 }
+
 
 .links-nav{
     gap: 2rem;
