--- a/style.css
+++ b/style.css
@@ -41,14 +41,15 @@ a, .btn{
 /*Navigation*/
 nav, .links-nav{
     display: flex;
-    text-align: center  ;
+    text-align: center ;
+    margin-top: 10px;
 
 }
 
 nav{
     justify-content: space-around;
     align-items: center;
-    height: 17vh;
+    
 }
 
 .links-nav{
@@ -80,7 +81,7 @@ a:hover{
 
 .hamburg-menu{
     position: relative;
-    display: inline-block;
+    display: inline;
     
 }
 
@@ -102,7 +103,7 @@ a:hover{
 }
 
 .menu-links{
-    position: absolute;
+    position: relative;
     top: 100%;
     right: 0;
     background-color: black;
@@ -114,7 +115,7 @@ a:hover{
 
 .menu-links a {
     display: block;
-    padding: 10px;
+    
     text-align: center;
     font-size: 1.5rem;
     color: white;
@@ -198,6 +199,11 @@ section{
     clip-path: circle();
 }
 
+.ndt{
+    color: grey;
+    
+
+}
 
 
 
@@ -208,7 +214,8 @@ section{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 1rem;
+    align-content: center;
+    
 
 }
 
