--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,26 +1,45 @@
-@media screen and (max-width: 1400px){
-    #profile{
-        height: 83vh;
-        
-    }
-    
-}
+
 
 @media screen and (max-width:900px){
 
     *{
         box-sizing: border-box;
+        align-content: center;
     }
 
-    #desktop-nav{
-        display: none;
+    body{
+        width: fit-content
+
     }
+
+
+    #desktop-nav{
+        display: flex;
+        margin:auto;
+        width: 50%;
+        
+
+        
+        
+    }
+
+    .links-nav{
+        font-size: 1.4rem;
+        gap: 0.5rem;
+        width: 1000%;
+        margin: 0 auto;
+        
+        
+    }
+
+
+
 
     .greeting{
         
         display: flex;
         text-wrap: balance;
-        width: 100%;
+        width: 400px;
         height: auto;
         
         
@@ -38,19 +57,16 @@
         
 
     }
-    #hamburg{
-        display: flex;
-        
-        
-        
-        
-        
+
+
+
+
+   
     }
-    #hamburg-menu{
-        display: block;
-    }
+    
     #profile,.section-container{
         display: block;
+        margin-top: 30px;
         
         align-items: center;
         
@@ -68,23 +84,64 @@
         margin: 0 auto 2rem;
     }
 
+    
+
+    .input-fields{
+        width: 100%;
+        margin-left: 20px;
+        margin-top: 50px;
+    }
+
+
     .section__text{
-        justify-content: center;
-        align-items: center;
-        align-content: center;
+        
+        
+        
+        margin: 0;
 
     }
-    .section__text__p2{
-        margin-left: 30px;
+
+    .horzline{
+        width: 360px;
+        height: 1px;
+        background-color: grey;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        opacity: 20%;
+        margin-left: 0;
     }
 
-@media screen and (max-width:600px){
-    #profile{
-        height: 83vh;
-        margin-bottom: 0;
+    input{
+        height: 10px;
+        width: 180px;
+        margin: 0;
+    }
+
+    textarea{
+        width: 366px;
+    }
+
+    
+
+    form{
+        margin-left: 500px;
+        background:black;
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        
+        border-radius: 10px;
+        gap: 0.5rem;
+    }
+
+    .submit{
+        width: 366px;
     }
     
-}
+    
+    
+  
+
 
 
 
@@ -98,4 +155,3 @@
         
 
     
-}
